--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1/bdepsi
+spring.datasource.url=jdbc:mysql://db:3306/webs
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mbaye
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://${MYSQL_ADDON_HOST}/${MYSQL_ADDON_DB}?autoReconnect=true
 #spring.datasource.username=${MYSQL_ADDON_USER}
